fixed layout shift for mozilla based browser

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,10 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 /* .container {
